src/test/ui/rust-2018/uniform-paths/issue-56596.stderr
error[E0659]: `issue_56596` is ambiguous (name vs any other name during import resolution)
  --> $DIR/issue-56596.rs:12:5
   |
LL | use issue_56596;
   |     ^^^^^^^^^^^ ambiguous name
   |
   = note: `issue_56596` could refer to an extern crate passed with `--extern`
   = help: use `::issue_56596` to refer to this extern crate unambiguously
note: `issue_56596` could also refer to the module imported here
  --> $DIR/issue-56596.rs:11:5
   |
LL | use m::*;
   |     ^^^^
   = help: use `crate::issue_56596` to refer to this module unambiguously

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
